commiting the first three components of the desktop view

--- a/src/component/joinCard/JoinCard.css
+++ b/src/component/joinCard/JoinCard.css
@@ -9,18 +9,10 @@
     box-shadow: 1px 1px 3px grey;
     background-color: white;
     padding: 15px;
-    border-radius: 25px;
+    /* border-radius: 25px; */
     border: transparent;
     margin-bottom: 50px;
 }
-
-
-
-
-
-
-
-
 .joinCard-content{
     width: 400px;
     height: 120px;
