--- a/src/component/learnCard/LearnCard.css
+++ b/src/component/learnCard/LearnCard.css
@@ -1,7 +1,7 @@
 .learn-card-container{
     padding: 40px 20px 20px 20px;
-    width: 350px;
-    height: 170px;
+    width: 330px;
+    height: 185px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,22 +12,28 @@
 }
 .learn-card-title{
     text-align: center;
-    margin-bottom:20px;
+    margin-bottom:15px;
     font-family: Sora;
     font-size: 21px;
+    padding: 0 20px;
 }
 .learn-card-paragraph{
     font-family: Sora;
-    font-size: 15px;
+    font-size: 13px;
     text-align: center;
+    padding: 0 16px;
 
 }
 
-
+.learn-card-image-div{
+    background-color: white;
+    padding:10px;
+    position: absolute;
+    top: -30px;
+    border-radius:50%;
+    box-shadow: 1px 1px 5px rgb(218, 214, 214);
+}
 
 .learn-card-image{
     border-radius: 50%;
-    position: absolute;
-    top: -35px;
-    box-shadow: 1px 1px 5px rgb(218, 214, 214);
 }
