additon of responsiveness and the fourth and fifth components to the webpage

--- a/src/pages/dataScience/hero/Hero.css
+++ b/src/pages/dataScience/hero/Hero.css
@@ -1,9 +1,14 @@
 .hero-container{
     background: url('/dataScienceHeroBg.png');
     background-size: cover;
-    height: calc(100vh - 94px);
+    height: calc(100vh - 57px);
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.hero-text{
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
@@ -23,8 +28,10 @@
     color: white;
     font-family: Sora;
     font-weight: 200;
-    font-size: 20px;
+    font-size: 19px;
     margin-bottom: 90px;
+    max-width: 580px;
+    text-align: center;
 }
 .join-now{
     background-color: #5BBCB4;
@@ -34,4 +41,66 @@
     border-radius: 20px;
     font-family: Sora;
     font-weight: 600;
+}
+
+
+
+@media (max-width: 838px){
+.hero-container{
+    background: url('/dataScienceHeroBg.png');
+    background-size: cover;
+    height: calc(918px + 57px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.hero-text{
+    text-align: center;
+}
+.hero-paragraph{
+    color: white;
+    font-family: Sora;
+    font-weight: 200;
+    font-size: 19px;
+    margin-bottom: 90px;
+    /* max-width: 580px; */
+}
+}
+
+@media (max-width:428px){
+    .hero-container{
+    background: url('/dataScienceHeroBg.png');
+    background-size: contain;
+    height: calc(900px - 57px);
+    display: flex;
+    justify-content: space-evenly;
+    /* align-items: center; */
+}
+    .hero-title{
+    font-size: 36px;
+    font-weight: bold;
+    color: white;
+    margin-bottom: 20px;
+    margin-top:-60px;
+
+    span{
+        color: #5BBCB4;
+    }
+}
+.hero-paragraph{
+    color: white;
+    font-family: Sora;
+    font-weight: 200;
+    font-size: 13px;
+    margin-bottom: 60px;
+    text-align: center;
+    padding: 0 60px;
+}
+.hero-image{
+    text-align: center;
+    margin-top: -50px;
+}
+.hero-image img{
+    width: 85%;
+}
 }
