--- a/src/component/joinCard/JoinCard.css
+++ b/src/component/joinCard/JoinCard.css
@@ -1,6 +1,3 @@
-/* .join-container{
-   
-} */
 .joinCard{
     display: flex;
     align-items: center;
@@ -9,16 +6,15 @@
     box-shadow: 1px 1px 3px grey;
     background-color: white;
     padding: 15px;
-    /* border-radius: 25px; */
     border: transparent;
     margin-bottom: 50px;
+    border-radius: 10px;
 }
 .joinCard-content{
     width: 400px;
     height: 120px;
     padding-top: 20px;
     margin-left: 20px;
-    /* background-color: pink; */
 }
 .joinCard-title{
     font-size: 24px;
@@ -30,4 +26,30 @@
     font-weight: 400;
     font-family: Sora;
     color: #627A95;
+}
+
+@media (max-width:428px){
+    .joinCard{
+    display: flex;
+    align-items: center;
+    width: 400px;
+    height:100px;
+    box-shadow: 1px 1px 3px grey;
+    background-color: white;
+    padding: 15px;
+    border: transparent;
+    margin-bottom: 50px;
+    border-radius: 10px;
+}
+.joinCard-title{
+    font-size: 20px;
+    font-family: Sora;
+    font-weight: bold;
+}
+.joinCard-paragraph{
+    font-size: 14px;
+    font-weight: 400;
+    font-family: Sora;
+    color: #627A95;
+}
 }
