--- a/src/component/learnCard/LearnCard.css
+++ b/src/component/learnCard/LearnCard.css
@@ -9,6 +9,12 @@
     box-shadow: 1px 1px 30px rgb(218, 214, 214);
     border-radius: 20px;
     margin-bottom: 50px;
+    transition: .9s;
+}
+.learn-card-container:hover{
+    color: white;
+    background-color: #0E243A;
+    cursor: pointer;
 }
 .learn-card-title{
     text-align: center;
@@ -36,4 +42,19 @@
 
 .learn-card-image{
     border-radius: 50%;
+}
+@media (max-width:838px){
+.learn-card-container{
+    padding: 40px 20px 20px 20px;
+    width: 330px;
+    height: 190px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    box-shadow: 1px 1px 30px rgb(218, 214, 214);
+    border-radius: 20px;
+    margin-bottom: 50px;
+    transition: .9s;
+}
 }
