--- a/src/pages/dataScience/whoThisFor/WhoThisFor.css
+++ b/src/pages/dataScience/whoThisFor/WhoThisFor.css
@@ -1,7 +1,59 @@
 
+ .WhoThisFor-container{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 200px;
+    margin-bottom: 100px;
+ }
+ .who-this-for-img img{
+    width: 90%;
+    
+ }
+ .who-this-for-content img{
+    width: 90%;
+    margin-top: -130px;
+ }
 
-.green-block{
-    max-width: 121px;
-    height: 116px;
-    background-color: #5BBCB4;
-}
+
+ @media(max-width:838px){
+.WhoThisFor-container{
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+    margin-bottom: 100px;
+    height: 200vh;
+ }
+ .who-this-for-img img{
+   width: 100%;
+   margin-top: -130px;
+ }
+ .who-this-for-content img{
+   width: 110%;
+ }
+ }
+
+ @media (max-width: 428px){
+.WhoThisFor-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+ }
+ .who-this-for-img{
+   display: flex;
+   justify-content: center;
+ }
+.who-this-for-img img{
+   width: 80%;
+ }
+ .who-this-for-content{
+    display: flex;
+   justify-content: center;
+   margin-top: -150px;
+ }
+.who-this-for-content img{
+   width: 80%;
+ }
+ }
