--- a/src/component/joinCard/JoinCard.css
+++ b/src/component/joinCard/JoinCard.css
@@ -1,20 +1,24 @@
+/* .join-container{
+   
+} */
 .joinCard{
     display: flex;
     align-items: center;
-    width: 520px;
+    width: 500px;
     height:100px;
     box-shadow: 1px 1px 3px grey;
     background-color: white;
     padding: 15px;
+    border-radius: 10px;
     border: transparent;
     margin-bottom: 50px;
-    border-radius: 10px;
 }
 .joinCard-content{
     width: 400px;
     height: 120px;
     padding-top: 20px;
     margin-left: 20px;
+    /* background-color: pink; */
 }
 .joinCard-title{
     font-size: 24px;
@@ -28,17 +32,23 @@
     color: #627A95;
 }
 
+
+@media (max-width:838px){
+ .joinCard{
+    width: 500px;
+    height:100px;
+    border: transparent;
+    border-radius: 10px;
+}
+}
+
+
+
 @media (max-width:428px){
-    .joinCard{
-    display: flex;
-    align-items: center;
+ .joinCard{
     width: 400px;
     height:100px;
-    box-shadow: 1px 1px 3px grey;
-    background-color: white;
-    padding: 15px;
     border: transparent;
-    margin-bottom: 50px;
     border-radius: 10px;
 }
 .joinCard-title{
