--- a/src/component/learnCard/LearnCard.css
+++ b/src/component/learnCard/LearnCard.css
@@ -1,7 +1,7 @@
 .learn-card-container{
-    padding: 40px 20px 20px 20px;
+    padding: 30px 20px 20px 20px;
     width: 330px;
-    height: 185px;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,24 +11,24 @@
     margin-bottom: 50px;
     transition: .9s;
 }
+.learn-card-title{
+        text-align: center;
+        margin-bottom:15px;
+        font-family: Sora;
+        font-size: 21px;
+        padding: 0 20px;
+    }
+    .learn-card-paragraph{
+        font-family: Sora;
+        font-size: 13px;
+        text-align: center;
+        padding: 0 16px;
+    
+    }
 .learn-card-container:hover{
     color: white;
     background-color: #0E243A;
     cursor: pointer;
-}
-.learn-card-title{
-    text-align: center;
-    margin-bottom:15px;
-    font-family: Sora;
-    font-size: 21px;
-    padding: 0 20px;
-}
-.learn-card-paragraph{
-    font-family: Sora;
-    font-size: 13px;
-    text-align: center;
-    padding: 0 16px;
-
 }
 
 .learn-card-image-div{
@@ -37,24 +37,27 @@
     position: absolute;
     top: -30px;
     border-radius:50%;
-    box-shadow: 1px 1px 5px rgb(218, 214, 214);
+    box-shadow: 1px 1px 10px rgb(218, 214, 214);
 }
 
 .learn-card-image{
     border-radius: 50%;
+    box-shadow: 1px 1px 5px rgb(218, 214, 214);
 }
-@media (max-width:838px){
-.learn-card-container{
-    padding: 40px 20px 20px 20px;
-    width: 330px;
-    height: 190px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-    box-shadow: 1px 1px 30px rgb(218, 214, 214);
-    border-radius: 20px;
-    margin-bottom: 50px;
-    transition: .9s;
-}
+@media (max-width:428px){
+
+    .learn-card-title{
+        text-align: center;
+        margin-bottom:12px;
+        font-family: Sora;
+        font-size: 21px;
+        padding: 0 10px;
+    }
+    .learn-card-paragraph{
+        font-family: Sora;
+        font-size: 13px;
+        text-align: center;
+        padding: 0 16px;
+    
+    }
 }
