--- a/src/pages/dataScience/join/Join.css
+++ b/src/pages/dataScience/join/Join.css
@@ -2,8 +2,10 @@
     display: flex;
     flex-direction: column;
     background: url('/joinBG.png');
-    background-size: contain;
-    height: 100vh;
+    background-size: cover;
+    /* background-repeat: no-repeat; */
+    height: auto;
+    padding-top: 20px;
 }
 .join-content{
     display: flex;
@@ -22,23 +24,24 @@
     letter-spacing: 1px;
     color: #627A95;
     font-family: Sora;
-    padding: 0 420px;
     font-style: 24px;
     font-weight: 400;
     margin-bottom: 20px;
+    padding: 0 400px;
 }
 .join-cards{
     display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
-     justify-content: space-between;
-    padding: 0 120px;
-    margin-top: 30px;
-    
+    padding: 0 140px;
+    margin-top: 30px; 
+    /* gap:20px; */
 }
 
 
+
 @media (max-width: 838px){
-    .join-container{
+.join-container{
     padding-top: 100px;
     display: flex;
     margin: auto;
@@ -49,9 +52,93 @@
 }
 .join-title{
     margin-bottom: 20px;
+    margin-top: -60px;
 }
 .join-paragraph{
-    padding: 0 150px;
+    padding: 0 140px;
+}
+.join-cards{
+    justify-content: center;
+}
+}
+
+@media (max-width:428px){
+    .join-title{
+    color: #133C8A;
+    font-size: 28px;
+    font-weight: bold;
+    font-family: Raleway;
+    margin-bottom: 5px;
+    margin-top: -50px;
+}
+.join-paragraph{
+    letter-spacing: 1px;
+    color: #627A95;
+    font-family: Sora;
+    padding: 0 30px;
+    font-size: 14px;
+    font-style: 24px;
+    font-weight: 400;
+    margin-bottom: 20px;
+}
+}.join-container{
+    display: flex;
+    flex-direction: column;
+    background: url('/joinBG.png');
+    background-size: cover;
+    /* background-repeat: no-repeat; */
+    height: auto;
+    padding-top: 20px;
+}
+.join-content{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 30px ;
+}
+.join-title{
+    color: #133C8A;
+    font-size: 38px;
+    font-weight: bold;
+    font-family: Raleway;
+    margin-bottom: 5px;
+}
+.join-paragraph{
+    letter-spacing: 1px;
+    color: #627A95;
+    font-family: Sora;
+    font-style: 24px;
+    font-weight: 400;
+    margin-bottom: 20px;
+    padding: 0 400px;
+}
+.join-cards{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0 140px;
+    margin-top: 30px; 
+    /* gap:20px; */
+}
+
+
+
+@media (max-width: 838px){
+.join-container{
+    padding-top: 100px;
+    display: flex;
+    margin: auto;
+    flex-direction: column;
+    background: url('/joinBG.png');
+    background-size: cover;
+    height: 200vh;
+}
+.join-title{
+    margin-bottom: 20px;
+    margin-top: -60px;
+}
+.join-paragraph{
+    padding: 0 140px;
 }
 .join-cards{
     justify-content: center;
