--- a/src/pages/dataScience/whoThisFor/WhoThisFor.css
+++ b/src/pages/dataScience/whoThisFor/WhoThisFor.css
@@ -1,10 +1,12 @@
 
  .WhoThisFor-container{
+   height: auto;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-top: 200px;
+    padding-top: 200px;
     margin-bottom: 100px;
+    /* background-color: lightblue; */
  }
  .who-this-for-img img{
     width: 90%;
@@ -15,7 +17,7 @@
     margin-top: -130px;
  }
 
-
+ 
  @media(max-width:838px){
 .WhoThisFor-container{
     display: flex;
@@ -38,8 +40,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: -100px;
+    margin-bottom: -220px;
+    /* background-color: red; */
  }
  .who-this-for-img{
    display: flex;
